--- a/scss/main.scss
+++ b/scss/main.scss
@@ -12,6 +12,8 @@ $lightGrey: #c2cbe5;
   box-sizing: border-box;
 }
 
+/* Mobile view 375 x 665 */
+
 body {
   font-family: 'Chivo', sans-serif;
   overflow-x: hidden;
